# apheleia

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.toml  docker-compose.yml  init.sql
apheleia/: Cargo.toml
apheleia-proc/: Cargo.toml
apheleia-proc/src/: lib.rs  queries.rs  subject_area.rs
apheleia/migrations/2022-03-01-232044_setup/: down.sql  up.sql
apheleia/src/: cli.rs  context.rs  db.rs  error.rs  extractor.rs  id.rs  lib.rs  run.rs  serve.rs  test.rs
apheleia/src/api/: archetype.rs  item.rs  loan.rs  mod.rs  role.rs  settings.rs  subject_area.rs  user.rs
apheleia/src/auth/: mod.rs  user.rs
apheleia/src/db/: func.rs  mod.rs  model.rs  schema.rs  tokio.rs
apheleia/src/graphql/: item.rs  mod.rs  mutation.rs  settings.rs  subject_area.rs  user.rs  util.rs
apheleia/src/id/: archetype.rs  item.rs  loan.rs  mod.rs  role.rs
apheleia/src/sql/: init_schema.sql  schema_exists.sql
backend/: .dockerignore  Cargo.toml  Dockerfile  config.toml
backend/apheleia/: Cargo.toml
backend/apheleia-proc/src/: lib.rs
backend/apheleia/src/: cli.rs  context.rs  db.rs  error.rs  extractor.rs  lib.rs  run.rs  schema.rs  serve.rs  settings.rs  subject_area.rs
backend/apheleia/src/graphql/: archetype.rs  item.rs  loan.rs  mod.rs  mutation.rs  query.rs  role.rs  route.rs  subject_area.rs
backend/apheleia/src/sql/: init_schema.sql  schema_exists.sql
backend/sbhs/: Cargo.toml
backend/src/: error.rs  extractor.rs  lib.rs  schema.rs  subject_area.rs
backend_proc/: Cargo.toml
backend_proc/src/: lib.rs
migrations/2022-03-01-232044_setup/: up.sql
src/: error.rs  lib.rs  main.rs  serve.rs  test.rs
src/api/: archetype.rs  item.rs  loan.rs  mod.rs  role.rs  settings.rs  subject_area.rs  user.rs
src/auth/: config.rs  user.rs
src/db/: mod.rs  model.rs  schema.rs  tokio.rs
src/id/: archetype.rs  item.rs  loan.rs  mod.rs
