[package]
name = "apheleia"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
chrono = "*"
actix-web = "*"
futures = "*"
thiserror = "*"
diesel = { version = "*", features = ["postgres", "r2d2"] }
diesel_migrations = "*"
serde_json = "*"
# serde = { version = "*", features = ["derive"] }
log = "*"
