[package]
name = "apheleia"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
chrono = { version = "*", features = ["serde"] }
actix-web = "*"
futures = "*"
thiserror = "*"
diesel = { git = "https://github.com/diesel-rs/diesel", features = ["postgres", "r2d2", "serde_json", "chrono", "uuid", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"], default-features = false }
serde_json = "*"
serde = { version = "*", features = ["derive"] }
log = "*"
uuid = { version = "0.8", features = ["v4", "serde"] }
async-trait = "*"
r2d2 = "*"
diesel_migrations = { git = "https://github.com/diesel-rs/diesel", features = ["postgres"] }
url = "*"
actix-service = "*"
actix-http = "*"
